fixed spacing styling for project content

--- a/css/input.scss
+++ b/css/input.scss
@@ -68,7 +68,7 @@ $font-size-body: 1em;
   text-decoration-color: $primary-color;
 }
 
-#education-content, #achievements-content, #experience-content, #projects-content .reviewer-hub-project {
+#education-content, #achievements-content, #experience-content, #projects-content {
   margin-top: 5%;
 }
 
@@ -82,7 +82,7 @@ $font-size-body: 1em;
 }
 
 #projects-content > * {
-  margin-top: 15%;
+  margin-top: 5%;
 }
 
 #achievements-content section p:last-child {
